Update README: cleaned merge markers and add build/run instructions